--- a/w01.md
+++ b/w01.md
@@ -24,4 +24,27 @@ sendiri. Hebat!
 
 Saya kira cara meng-edit file .md sama seperti html, namun ternyata berbeda. Dan saya baru menemukan caranya setelah melihat video disini.
 
-5. 
+5. [Internet di Tahun 1996](https://www.youtube.com/watch?v=ojT0gQHeyJQ&t=192s)
+
+Ternyata internet sebelum saya lahir sudah ada dan tampilannya tidak kalah keren dengan sekarang. Kalau di Indonesia, mungkin di tahun 2000-an internet belum terlalu populer. Kebanyakan masih menggunakan warnet jika ingin berselancar di internet.
+
+6. [Pertama Kalinya Mencoba Mengaktifkan VMX](https://www.youtube.com/watch?v=MOuTxfzCvMY)
+
+Saya panik sendiri saat melihat video ini. Takut jika tiba-tiba setelah mencobanya, laptop saya jadi tidak bisa dinyalakan. Namun, setelah tanya ke asdos, saya akhirnya mencobanya dan tidak terlalu buruk. Memang tampilannya agak sedikit menyeramkan, tapi setelah itu tidak apa-apa.
+
+7. [Siapa Pembuat Linux?](https://www.youtube.com/watch?v=o8NPllzkFhE)
+
+Dari sini saya belajar banyak dari seorang Linus Torvalds. Dia adalah orang yang optimis. Selama setengah hidupnya, ia menghabiskan waktu dengan coding dan membuat Linux di kantor sederhananya, yaitu di rumahnya sendiri. Tidak hanya itu, Linux juga dijadikan sebagai open source yang menurut saya hal itu briliant!
+
+8. [Belajar Bash Terminal](https://www.youtube.com/watch?v=oxuRxtrO2Ag)
+
+Ini adalah tutorial mengenai Bash. Saya masih mencoba untuk memahami bagaimana cara melakukannya. Sejauh ini video ini dapat mungkin akan membantu saya di mata kuliah OS. 
+
+9. [GitHub vs. Gitlab](https://www.codepolitan.com/github-vs-gitlab-kamu-pilih-mana-58808e62c2b28)
+
+Selama ini saya mengiri bahwa 2 aplikasi ini saling berkaitan. Namun, keduanya jelas memiliki perbedaan. Yang paling mencolok adalah di GitLab, projek bisa di-private. 
+
+10. [Install Debian di Virtualbox]()
+
+Saya mencoba melakukan tutorial yang ada di website https://osp4diss.vlsm.org/. Namun, referensi saya tidak hanya dari sini. Saya mencoba membaca beberapa cara lainnya. Menurut saya, cara install Debian ini cukup tricky. Dan juga, detailnya banyak dan membuat saya harus teliti bahwa saya sudah mengklik apa yang diinginkan dengan benar.
+
