--- a/w04.md
+++ b/w04.md
@@ -15,7 +15,7 @@ Address binding adalah proses pemetaan dari suatu ruang address ke ruang address
 4. [Difference between Compile Time and Load Time](https://www.geeksforgeeks.org/difference-between-compile-time-and-load-time-address-binding/)<br>
 Setelah mengetahui cara melakukan address binding, selanjutnya kita mencari tahu apa saja perbedaan dari kedua cara tersebut. Pada link di atas akan menjelaskan perbedaan tersebut yang disajikan dalam tabel untuk memudahkan pembaca dalam memahami materi ini. 
 
-5. [Difference between Compile Time and Execution Time](https://www.geeksforgeeks.org/difference-between-compile-time-and-execution-time-address-binding/?ref=lbp)<br>
+5. [Difference between Compile Time and Execution Time](https://www.geeksforgeeks.org/difference-between-compile-time-and-execution-time-address-binding/)<br>
 Lanjutan pada poin ke-4 yaitu mengetahui perbedaan antara compile time dan executin time. Link yang disediakan berasal dari website yang sama dengan poin 4 sehingga cara penjabarannya pun sama.
 
 6. [Difference between Loading and Linking](https://www.geeksforgeeks.org/difference-between-loading-and-linking/)<br>
